--- a/style.css
+++ b/style.css
@@ -330,7 +330,9 @@ span {
   margin-left: 43%;
   cursor: pointer;
 }
-
+.education :hover{
+  text-decoration: underline;
+}
 .text-1 {
   width: 45%;
   height: 100%;
@@ -402,6 +404,10 @@ span {
   border-radius: 50px;
   padding: 10px;
   margin-left: 43%;
+  cursor: pointer;
+}
+.experience :hover{
+  text-decoration: underline;
 }
 .text22 {
   width: 45%;
@@ -551,6 +557,9 @@ span {
   height: 170px;
   position: relative;
 }
+.box1:hover{
+  transform: scale(1.1);
+ }
 .box1-text {
   position: absolute;
   font-size: 10px;
@@ -569,6 +578,9 @@ span {
   height: 170px;
   position: relative;
 }
+.box2:hover{
+  transform: scale(1.1);
+ }
 .box2-text {
   position: absolute;
   font-size: 10px;
@@ -587,6 +599,9 @@ span {
   height: 170px;
   position: relative;
 }
+.box3:hover{
+  transform: scale(1.1);
+ }
 .box3-text {
   position: absolute;
   font-size: 10px;
@@ -605,6 +620,9 @@ span {
   height: 170px;
   position: relative;
 }
+.box4:hover{
+  transform: scale(1.1);
+ }
 .box4-text {
   position: absolute;
   font-size: 10px;
@@ -623,6 +641,9 @@ span {
   height: 170px;
   position: relative;
 }
+.box5:hover{
+  transform: scale(1.1);
+ }
 .box5-text {
   position: absolute;
   font-size: 10px;
@@ -647,6 +668,9 @@ span {
   width: 18%;
   height: 170px;
 }
+.box-1:hover{
+  transform: scale(1.1);
+ }
 .box-1 img {
   width: 100%;
   height: 70%;
@@ -656,6 +680,9 @@ span {
   width: 18%;
   height: 170px;
 }
+.box-2:hover{
+  transform: scale(1.1);
+ }
 .box-2 img {
   width: 100%;
   height: 70%;
@@ -665,6 +692,9 @@ span {
   width: 18%;
   height: 170px;
 }
+.box-3:hover{
+  transform: scale(1.1);
+ }
 .box-3 img {
   width: 100%;
   height: 70%;
@@ -674,6 +704,9 @@ span {
   width: 18%;
   height: 170px;
 }
+.box-4:hover{
+  transform: scale(1.1);
+ }
 .box-4 img {
   width: 100%;
   height: 70%;
@@ -683,6 +716,9 @@ span {
   width: 18%;
   height: 170px;
 }
+.box-5:hover{
+  transform: scale(1.1);
+ }
 .box-5 img {
   width: 100%;
   height: 70%;
@@ -722,6 +758,9 @@ span {
 .imgg1 {
   width: 30%;
 }
+.imgg1:hover{
+  transform: scale(1.1);
+ }
 .imgg1 img {
   width: 100%;
   height: 100%;
@@ -731,6 +770,9 @@ span {
   width: 30%;
   height: 200px;
 }
+.imgg2:hover{
+  transform: scale(1.1);
+ }
 .imgg2 img {
   width: 100%;
   height: 100%;
@@ -740,6 +782,9 @@ span {
   width: 30%;
   height: 200px;
 }
+.imgg3:hover{
+  transform: scale(1.1);
+ }
 .imgg3 img {
   width: 100%;
   height: 100%;
@@ -885,7 +930,6 @@ span {
 }
 .date {
   width: 100%;
-  height: 100px;
   text-align: center;
 }
 .date h1 {
@@ -893,5 +937,6 @@ span {
   margin-top: 20px;
 }
 @media only screen (max-width:768px) {
-
+  
+  
 }
